# skeletor

./: CMakeLists.txt  README.md
doc/: animation_subsystem.dia  build.txt  doxygen.cfg  manual.tex  physics_subsystem.dia  specification_doc.tex  technical_doc.tex  test_document.tex
inc/bullet-2.81/: CMakeLists.txt
res/: astroboy_stand_blender.dae  astroboy_walk_blender.dae  test_cube_simple.dae
src/: character.cpp  character.hpp  main.cpp  player.cpp  player.hpp
src/animation/: animation_library.cpp  animation_library.hpp  box.cpp  box.hpp  collada.cpp  collada.hpp  collada_library_animation.cpp  collada_library_animation.hpp  joint.cpp  joint.hpp  keyframe.cpp  keyframe.hpp  parse.cpp  parse.hpp  skeleton.cpp  skeleton.hpp  skeleton_pose.cpp  skeleton_pose.hpp
src/animation/collada/: collada.cpp  collada.hpp  collada_library_animation.cpp  collada_library_animation.hpp  collada_library_visual_scene.cpp  collada_library_visual_scene.hpp
src/graphics/: camera.cpp  camera.hpp  graphics_adapter_interface.hpp  opengl_adapter.cpp  opengl_adapter.hpp  opengl_skeleton_renderer.cpp  opengl_skeleton_renderer.hpp  skeleton_renderer.cpp  skeleton_renderer.hpp  skeleton_renderer_interface.hpp
src/math/: mat2x2.hpp  mat3x3.hpp  mat4x4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/physics/: bullet_objects_converter.cpp  bullet_objects_converter.hpp  bullet_opengl_debug_drawer.cpp  bullet_opengl_debug_drawer.hpp  bullet_physics.cpp  bullet_physics.hpp  bullet_ragdoll.cpp  bullet_ragdoll.hpp  physics_interface.hpp
src/util/: search.cpp  search.hpp  string.cpp  string.hpp
test/: main.cpp  player.cpp  player.hpp  removeme.txt
test/animation/: animation.cpp  animation.hpp  collada.cpp  collada.hpp  keyframe.cpp  keyframe.hpp
test/physics/: bullet_objects_converter.cpp  bullet_objects_converter.hpp  bullet_physics.cpp  bullet_physics.hpp  physics.cpp  physics.hpp
test/util/: search.cpp  search.hpp  string.cpp  string.hpp  util.cpp  util.hpp
